--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,12 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
-</html>
+<% include _partials/_head %>
+    
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <h1><%= title %></h1>
+      <p>Welcome to <%= title %></p>
+    </div>
+  </div>
+</div>    
+    
+<% include _partials/_footer %>    
