Weather app working

--- a/views/_partials/_head.ejs
+++ b/views/_partials/_head.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Weather</title>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body class="body">
     <% include _header %>    
