--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,20 @@
     <div class="col-md-12">
       <h1><%= title %></h1>
       <p>Welcome to <%= title %></p>
+      <hr>
+      
+      <div class="weather-panel-container">
+        <div class="panel panel-primary weather-panel">
+          <div class="panel-heading">
+            <h3 class="panel-title weather-where">{{ weather.where }}</h3>
+          </div>
+          <div class="panel-body">
+            <h4 class="weather-temperature">{{ weather.temperature }} <span class="weather-unit">{{ weather.unit }}</span></h4>
+            <h5 class="weather-description">{{ weather.description }}</h5>
+          </div>
+        </div>
+      </div>
+      
     </div>
   </div>
 </div>    
