--- a/views/_partials/_footer.ejs
+++ b/views/_partials/_footer.ejs
@@ -1,4 +1,6 @@
     <script src="//code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="/js/template-weather.js"></script>
+    <script src="/js/app.js"></script>
 </body>
 </html>
