--- a/views/_partials/_navbar.ejs
+++ b/views/_partials/_navbar.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default navbar-static-top">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -14,8 +14,8 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Open Weather</a></li>
-        <li><a href="#">Service Weather</a></li>
+        <li><a href="/api/weather/0" class="open-weather" data-service="open-weather">Open Weather</a></li>
+        <li><a href="/api/weather/1" class="tremendous-weather" data-service="tremendous-weather">Tremendous Weather</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
